Added profile picture
Updated profile picture; need to check size

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Conor Keogh"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "Clinical-academic trainee working on the application of engineering techniques to the management of nervous system pathology"
   location         : "Oxford"
   employer         : "Oxford Neural Interfacing"
