--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-UK"
 title                    : "Conor Keogh"
 title_separator          : "-"
 name                     : &name "Conor Keogh"
-description              : &description "Clinical-academic trainee in neurosurgery"
+description              : &description "Postdoctoral researcher in neural interfacing"
 url                      : https://conorkeogh.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "conorkeogh/conorkeogh.github.io"
