Updated bio sidebar

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Conor Keogh"
   avatar           : "profile.jpg"
-  bio              : "Clinical-academic trainee in neurosurgery"
+  bio              : "Postdoctoral researcher in neural interfacing"
   location         : "University of Oxford"
   employer         : #"Oxford Neural Interfacing"
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=conor+keogh"
