--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,9 @@ main:
   - title: "Research"
     url: /research/
 
+  - title: "Tools"
+    url: /tools/
+
   - title: "Teaching"
     url: /teaching/    
 
